@@ -1,5 +1,8 @@
 2011-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/HPProCurve.pm: new discovery module
+	by Dean Hamstead
+
 	* perllib/Torrus/Collector/SNMP.pm, perllib/Torrus/DevDiscover.pm:
 	new SNMP parameter: "snmp-maxrepetitions". The default value is 10.
 	Previously Net::SNMP was setting it to 25.
